# CG

./: CMakeLists.txt  README.md
Fase_1/engine/: engine.cpp
Fase_1/files/: sphere.3d
Fase_1/files3d/: box.3d  cylinder.3d  plane.3d  sphere.3d  test.3d
Fase_1/generator/: models.cpp
Fase_1/src/: shape.cpp  shape.h  vertex.cpp
Fase_2/: CMakeLists.txt
Fase_2/engine/: engine.cpp  group.cpp  group.h  parser.cpp  parser.h  transforms.cpp  transforms.h
Fase_2/files3d/: cone.3d  orbit.3d  sistemaSolar.xml  sphere.3d  superTorus.3d  test.3d
Fase_2/generator/: generator.cpp  models.cpp  models.h
Fase_2/src/: shape.cpp  shape.h  vertex.cpp  vertex.h
Fase_3/: CMakeLists.txt  dynamixSolar.xml
Fase_3/engine/: engine.cpp  group.cpp  group.h  parser.cpp  parser.h
Fase_3/files3d/: cena.3d  ring.3d  ring2.3d  space.xml  torus.3d
Fase_3/generator/: generator.cpp  models.cpp
Fase_3/src/: shape.cpp  shape.h  vertex.h
Fase_4/: CMakeLists.txt  dynamixSolar.xml
Fase_4/engine/: engine.cpp  global.h  group.cpp  group.h  lights.cpp  lights.h  parser.cpp  parser.h  transforms.cpp  transforms.h
Fase_4/files3d/: asteroid.3d  asteroid.xml  box.3d  bullet.xml  space.xml  sphere.3d  torus.3d
Fase_4/generator/: bezier.cpp  bezier.h  generator.cpp  models.cpp  models.h
Fase_4/src/: shape.cpp  shape.h  vertex.cpp  vertex.h
engine/: engine.cpp
files/: cone.3d  cylinder.3d  example.xml
generator/: generator.cpp  models.h
